Update plugins and move jacoco and coveralls